--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "lodash": "^4.17.10",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
