--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "chart.js": "^2.7.2",
     "cordova-ios": "4.5.4",
     "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-ble": "^2.0.1",
-    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-eddystone": "^1.3.0",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-keyboard": "^2.1.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
